[workspace]
members = ["contracts/auction", "contracts/lockdrop", "contracts/credits", "contracts/vesting-lp", "contracts/vesting-managed", "contracts/vesting-investors", "contracts/cw20-merkle-airdrop", "contracts/price-feed", "contracts/astroport/*"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
