[package]
name = "astroport-airdrop"
version = "1.0.0"
authors = ["_astromartian"]
edition = "2021"
description = "Contract to facilitate ASTRO Token airdrop"


exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "1.0.1" }
cw20 = "1.0.1"
astroport-periphery = { path = "../../packages/astroport_periphery" }
cosmwasm-std = { version = "1.0" }
cw-storage-plus = { version = "1.0.1" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8"
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch="main" }

hex = "0.4.3"
sha3 = "0.10.6"

[dev-dependencies]
cosmwasm-schema = { version = "1.0" }
cw-multi-test = "0.16.2"
astroport-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch="main" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch="main" }
neutron-auction = { path = "../auction" }
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core.git", branch="main" }