[package]
name = "astroport-auction"
version = "1.0.0"
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
edition = "2021"
description = "Contract to facilitate cNTRN-NATIVE LP Pool bootstrapping via auction"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-periphery = { path = "../../packages/astroport_periphery" }

cw20 = { version = "1.0.1" }
cw2 = { version = "1.0.1" }
cosmwasm-std = { version = "1.2.1" }
cw-storage-plus = { version = "1.0.1" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8"

[dev-dependencies]
cosmwasm-schema = { version = "1.0" }
cosmwasm-storage = { version = "1.0" }
cw-multi-test = "0.16.2"
# needed for intergration testing
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-vesting = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-generator = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-whitelist = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-factory = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-airdrop = { path = "../airdrop" }
neutron-lockdrop = { path = "../lockdrop" }
