[package]
name = "neutron-auction"
version = "1.0.1"
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
edition = "2021"
description = "Contract to facilitate cNTRN-NATIVE LP Pool bootstrapping via auction"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v3.6.0" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8"
astroport-periphery = { workspace = true }
cw20 = { workspace = true }
cw2 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
