[package]
name = "credits"
version = "0.1.0"
authors = ["nhpd <dmitry.klpv@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { git = "https://github.com/neutron-org/cw-plus_balances-snapshots", rev = "bfe7471ae59a0aa68155841a741d428030183b1a", features = ["library"] }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
