[package]
name = "cw20-merkle-airdrop"
version = "0.14.2"
authors = [
  "Orkun Kulce <orkunkl@users.noreply.github.com>",
  "Terraform Labs, PTE.",
  "Murad Karammaev <muradkarammaev@gmail.com>",
]
edition = "2018"
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"
repository = "https://github.com/neutron-org/neutron-tge-contracts"
homepage = "https://neutron.org"
documentation = "https://docs.neutron.org/"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cosmwasm-std = "1.2.1"
cw-storage-plus = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
hex = "0.4"
sha2 = { version = "0.9.9", default-features = false }
ripemd = "0.1.1"
bech32 = "0.9.0"
cosmwasm-schema = "1.0.0"
semver = "1.0.14"
credits = { path = "../credits", version = "0.1.0" }

[dev-dependencies]
cw20-base = { version = "1.0.1", features = ["library"] }
cw-multi-test = "0.16.2"
