[package]
name = "cw20-merkle-airdrop"
version = "0.14.2"
authors = [
  "Orkun Kulce <orkunkl@users.noreply.github.com>",
  "Terraform Labs, PTE.",
  "Murad Karammaev <muradkarammaev@gmail.com>",
]
edition = "2018"
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"
repository = "https://github.com/neutron-org/neutron-tge-contracts"
homepage = "https://neutron.org"
documentation = "https://docs.neutron.org/"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
#cw-utils = "1.0.1"
cw2 = { workspace = true }
cw20 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
bech32 = { workspace = true }
cosmwasm-schema = { workspace = true }
semver = { workspace = true }
credits = { path = "../credits", version = "0.1.0" }

[dev-dependencies]
cw20-base = { workspace = true }
cw-multi-test = { workspace = true }
