[package]
name = "astroport-lockdrop"
version = "1.2.0"
authors = ["_astromartian"]
edition = "2021"


exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-periphery = { path = "../../packages/astroport_periphery" }
terraswap = "2.6"
cosmwasm-std = { version = "1.0" }
cw20 = { version = "0.13" }
cw2 = { version = "0.13" }
cw-storage-plus = {version = "0.13", features = ["iterator"]}
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }

[dev-dependencies]
cw20-base = { version = "0.13", features = ["library"] }
cosmwasm-schema = { version = "1.0" }
cw-multi-test = "0.13"

# Terraswap contracts
terraswap-factory = { git = "https://github.com/terraswap/terraswap.git", branch = "main" }
terraswap-pair = { git = "https://github.com/terraswap/terraswap.git", branch = "main" }
terraswap-token = { git = "https://github.com/terraswap/terraswap.git", branch = "main" }
# Astroport contracts
astroport-factory = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-pair-stable = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-vesting = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-generator = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-generator-proxy-to-mirror = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-staking = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-xastro-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
neutron-auction = { path = "../auction" }
astroport-airdrop = { path = "../airdrop" }
astroport-whitelist = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-governance = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
voting-escrow = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
