[package]
name = "neutron-lockdrop"
version = "1.2.1"
authors = ["_astromartian"]
edition = "2021"


exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v3.6.0" }
credits = {path = "../credits"}
astroport-periphery = { path = "../../packages/astroport_periphery" }
terraswap = "2.6"
cosmwasm-std = { version = "1.0" }
cw20 = { version = "0.13" }
cw2 = { version = "0.13" }
cw-storage-plus = {version = "0.15.1", features = ["iterator"]}
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }

[dev-dependencies]
cw20-base = { version = "1.0.1", features = ["library"] }
cosmwasm-schema = { version = "1.0" }
cw-multi-test = "0.13"
