[package]
name = "neutron-price-feed"
version = "0.1.0"
authors = ["nhpd <dmitry.klpv@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport-periphery = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-band = { workspace = true }
thiserror = { workspace = true }
obi = { workspace = true }
