[package]
name = "token_sale"
version = "0.1.0"
edition = "2021"
description = "Token sale contract"
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "0.15.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = { version = "1.0.1", features = ["iterator"]}
schemars = "0.8.10"
thiserror = "1.0.24"
cw-asset = { version = "2.4.0", default-features=false }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }