[package]
name = "vesting-investors"
version = "1.1.1"
authors = ["Neutron"]
edition = "2021"
description = "Vesting contract which provides queries to get the amount of tokens that are being held by user at certain height and allows to remove vesting accounts to the contract's owner."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.15" }
vesting-base = {path = "../../packages/vesting-base"}
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-schema = { version = "1.1", default-features = false  }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", rev = "65ce7d1879cc5d95b09fa14202f0423bba52ae0e" }
cw20 = { version = "0.15" }
cw-utils = "0.15"