[package]
name = "vesting-investors"
version = "1.1.1"
authors = ["Neutron"]
edition = "2021"
description = "Vesting contract which provides queries to get the amount of tokens that are being held by user at certain height and allows to remove vesting accounts to the contract's owner."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { workspace = true }
vesting-base = { workspace = true }
astroport = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
# we cannot use latest cw-utils because 0.15 is used in astroport-core
cw-utils = "0.15"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", rev = "65ce7d1879cc5d95b09fa14202f0423bba52ae0e" }
cw20 = { workspace = true }
