[package]
name = "vesting-lp-pcl"
version = "1.1.0"
authors = ["Neutron"]
edition = "2021"
description = "Vesting contract with a voting capabilities. Provides queries to get the amount of tokens are being held by user at certain height."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { workspace = true }
cw20 = { workspace = true }
astroport = { workspace = true }
vesting-base = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", rev = "65ce7d1879cc5d95b09fa14202f0423bba52ae0e" }
cw-utils = "0.15"
