[package]
name = "vesting-lp"
version = "1.1.0"
authors = ["Neutron"]
edition = "2021"
description = "Vesting contract with a voting capabilities. Provides queries to get the amount of tokens are being held by _user at certain height."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.15" }
vesting-base = {path = "../../packages/vesting-base"}
vesting-lp-pcl = {path = "../vesting-lp-pcl"}
astroport = { path = "../../packages/astroport" }
cosmwasm-schema = { version = "1.1", default-features = false  }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
cw20 = { version = "0.15" }

[dev-dependencies]
cw-multi-test = "0.15"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", rev = "65ce7d1879cc5d95b09fa14202f0423bba52ae0e" }
cw20 = { version = "0.15" }
cw-utils = "0.15"
