[package]
name = "vesting-lp"
version = "2.0.0"
authors = ["Neutron"]
edition = "2021"
description = "Vesting contract with a voting capabilities. Provides queries to get the amount of tokens are being held by user at certain height."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-storage-plus = "0.15"
cw2 = { workspace = true }
cw20 = { workspace = true }
astroport = { workspace = true }
vesting-base = { workspace = true }
vesting-base-lp = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", tag = "v3.6.0" }
cw-utils = "0.15"
