[package]
name = "vesting-lti"
version = "1.1.1"
authors = ["andrei.z@p2p.org"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
vesting-base = { workspace = true }
astroport = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
# we can't use latest cw-utils because astroport-core uses 0.15
cw-utils = "0.15"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", rev = "65ce7d1879cc5d95b09fa14202f0423bba52ae0e" }
cw20 = { workspace = true }
